statefulset/v20240713/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ${AppName}
  name: ${AppName}
